--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@300;500;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 </head>
 
 <body>
@@ -26,6 +30,11 @@
         <!-- Thumbnails injected here -->
       </div>
       <footer class="sidebar-footer">
+        <div id="add-menu" class="add-menu hidden">
+          <button data-type="TEXT">📝 Text</button>
+          <button data-type="PHOTO">🖼️ Photo</button>
+          <button data-type="VOICE">🎤 Voice</button>
+        </div>
         <button id="add-item-btn" class="btn-primary">+ New</button>
       </footer>
     </aside>
